--- a/SvelteFT/src/app.html
+++ b/SvelteFT/src/app.html
@@ -7,5 +7,9 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<h1>Hellooo</h1>
+
+		<svg></svg>
 	</body>
 </html>
