API working with a LOT of error messages. TS error fix up coming

--- a/SvelteFT/src/app.html
+++ b/SvelteFT/src/app.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-		<link rel="stylesheet" href="/src/app.css">
+		<!-- <link rel="stylesheet" href="/src/app.css"> -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 
-		<h1>Flight Tracker</h1>
+		<!-- <h1>Flight Tracker</h1>
 
-		<svg id="globe"></svg>
+		<svg id="globe"></svg> -->
 	</body>
 </html>
